--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -53,15 +53,20 @@
      android:id="@+id/QRCodeView"/> -->
  
   <SurfaceView
+     android:layout_width="600dp"
+     android:layout_height="600dp"
+     android:id="@+id/QRCodeSurfaceView"/>
+  
+    <SurfaceView
      android:layout_width="300dp"
      android:layout_height="300dp"
-     android:id="@+id/QRCodeSurfaceView"/>
+     android:id="@+id/VideoSurfaceView"/>
  
- <TextView
-     android:layout_width="wrap_content"
-     android:layout_height="300dp"
-     android:id="@+id/textView2"/>
- 
+    	 <TextView
+	     android:layout_width="wrap_content"
+	     android:layout_height="300dp"
+	     android:id="@+id/textView2"/>
+	 
  
  </LinearLayout>>
  
